# gbf_discord_bot_rs

./: .gitignore  Cargo.toml  ORM_MIGRATION.md  README.md  SUMMARY.md  test_poise_migration.md
locales/: en.yml  ja.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/events/: handler.rs  mod.rs
src/events/handlers/: mod.rs  reaction_add.rs  reaction_remove.rs  reactions.rs  ready.rs
src/events/interactions/: mod.rs
src/events/interactions/command_interactions/: mod.rs
src/events/interactions/command_interactions/slash/: environ_load.rs  help.rs  mod.rs  recruit.rs  registration.rs
src/events/interactions/components/: mod.rs
src/events/interactions/modal/: mod.rs
src/facades/: battle_recruitment.rs  environment.rs  mod.rs
src/models/: battle_recruitment.rs  database.rs  db.rs  environment.rs  message_text.rs  mod.rs  quest.rs
src/models/entities/: battle_recruitment.rs  environment.rs  message_text.rs  mod.rs  quest.rs  quest_alias.rs
src/repository/: battle_recruitment_repository.rs  environment_repository.rs  message_text_repository.rs  mod.rs  quest_repository.rs
src/services/: message_service.rs  mod.rs
src/services/battle/: battle_type.rs  mod.rs  reaction_handler.rs  recruitment.rs
src/services/battle_recruitment/: _recruitment.rs  mod.rs  params.rs  reaction_handler.rs
src/services/battle_recruitment/message/: generator.rs
src/services/battle_recruitment/recruitment/: cancel.rs  mod.rs  new.rs  participants.rs  start.rs  update.rs
src/services/database/: database.rs  mod.rs  models.rs
src/services/environment/: environment.rs  init.rs  mod.rs  service.rs
src/services/permission/: mod.rs
src/types/: mod.rs
src/utils/: constants.rs  database.rs  date_parser.rs  discord_helper.rs  mod.rs
tests/: mod.rs
tests/integration/: database_tests.rs  event_handlers_tests.rs  mod.rs  utils_test.rs
tests/system/: bot_startup_test.rs  bot_tests.rs  mod.rs
