[package]
name = "gbf_discord_bot_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.10"
