[package]
name = "gbf_discord_bot_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
regex = "1.11.1"
log = { version = "0.4.27" }
logcall = { version = "0.1.11"}
rust-i18n = "3.1.5"
dateparser = "0.2.1"
futures = "0.3.31"


[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.10"
